--- a/package.json
+++ b/package.json
@@ -3,14 +3,37 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "node --inspect-brk ./bin/www",
+    "dev:debug": "./node_modules/.bin/nodemon --inspect server/server.js",
+    "host": "node_modules/.bin/webpack-dev-server --host 0.0.0.0",
+    "webpack": "node_modules/.bin/webpack --config ./webpack.config.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "babel-core": "~6.23.1",
+    "babel-loader": "~6.3.2",
+    "babel-preset-env": "~1.6.1",
+    "babel-preset-react": "~6.22.0",
+    "nodemon": "^1.19.0",
+    "webpack": "~2.3.1",
+    "webpack-dev-server": "~2.4.2",
+    "write-file-webpack-plugin": "^4.2.0"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "babel-polyfill": "~6.23.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.16.4",
+    "express-handlebars": "^3.0.2",
+    "lodash": "^4.17.11",
+    "react": "~15.4.2",
+    "react-dom": "~15.4.2",
+    "react-router": "~3.2.0"
   }
 }
